src/AlloyMvcTemplates/modules/_protected/episerver-labs-project-enhancements/1.0.0/Scripts/extended-projects.css
.extended-projects-dialog textarea.dijitTextBox {
    margin: 0;
}

.extended-projects-dialog .dijitDialogPaneContentArea.dijitDialogSingleChild {
    max-height: 600px;
    overflow-y: auto;
}

.extended-projects-dialog .epi-item__add .dijitTextBox {
    width: 13em;
}

.project-indicator-tree-container>span {
    margin-left: 4px;
}

.project-overview-description {
    display: block;
    color: #777;
    font-size: 13px;
    margin-bottom: 8px;
}

.project-indicator {
    display: inline-block;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    margin-left: 2px;
    background: #c0c0c0;
}

.project-list-categories-container .project-indicator {
    max-width: 80px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    padding: 0 4px;
    margin-left: 0;
    margin-right: 4px;
}

.epi-project-mode-toolbar__selector .project-indicator {
    width: 10px;
    height: 10px;

    margin-left: 0;
    margin-right: 4px;
}

.project-tooltip .dijitTooltipContainer {
    padding: 16px;
}

.Sleek .dijitPopup.project-tooltipPopup {
    box-shadow: none;
}

.epi-user-role-selector.epi-approval-step .dgrid-content {
    margin-top: 0;
}

.project-category-dialog .dijitMenu {
    border: none;
}

.project-category-dialog .dijitMenu .dijitMenuItemLabel {
    max-width: 300px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.project-tooltip .project-description {
    display: block;
    padding: 4px 0 8px 0;
    font-style: italic;
    color: #777;
    max-width: 300px;
}

.project-tooltip .close-button {
    float: right;
    margin-top: 16px;
}

